--- a/My_Project_dotNET/Views/Shared/_Layout.cshtml
+++ b/My_Project_dotNET/Views/Shared/_Layout.cshtml
@@ -259,11 +259,12 @@
                     <span>Dashboard</span>
                 </a>
             </li><!-- End Dashboard Nav -->
+
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                <a class="nav-link collapsed" data-bs-target="#User-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-person"></i><span>User</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
-                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <ul id="User-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
                             <i class="bi bi-circle"></i><span>User List</span>
@@ -276,11 +277,12 @@
                     </li>
                 </ul>
             </li><!-- End User Nav -->
+
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                <a class="nav-link collapsed" data-bs-target="#Quiz-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-person-raised-hand"></i><span>Quiz</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
-                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <ul id="Quiz-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
                             <i class="bi bi-circle"></i><span>Quiz List</span>
@@ -293,11 +295,12 @@
                     </li>
                 </ul>
             </li><!-- End Quiz Nav -->
+
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                <a class="nav-link collapsed" data-bs-target="#Question-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-menu-button-wide"></i><span>Question</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
-                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <ul id="Question-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
                             <i class="bi bi-circle"></i><span>Question List</span>
@@ -311,11 +314,12 @@
                 </ul>
 
             </li><!-- End Question Nav -->
+
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                <a class="nav-link collapsed" data-bs-target="#QuestionLevel-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-book-half"></i><span>Question Level</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
-                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <ul id="QuestionLevel-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
                             <i class="bi bi-circle"></i><span>Question Level List</span>
@@ -329,11 +333,12 @@
                 </ul>
 
             </li><!-- End Question Level Nav -->
+
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                <a class="nav-link collapsed" data-bs-target="#QuizWiseQuestion-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-bar-chart-steps"></i><span>Quiz Wise Question</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
-                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <ul id="QuizWiseQuestion-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
                             <i class="bi bi-circle"></i><span>Quiz Wise Question List</span>
@@ -346,6 +351,7 @@
                     </li>
                 </ul>
             </li><!-- End Quiz Wise Question Nav -->
+
         </ul>
 
     </aside><!-- End Sidebar-->
@@ -362,7 +368,8 @@
         <div class="copyright">
             &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
         </div>
-    </footer>
+    </footer> <!-- End Footer -->
+
     <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/assets/vendor/chart.js/chart.umd.js"></script>
