--- a/My_Project_dotNET/Views/Shared/_Layout.cshtml
+++ b/My_Project_dotNET/Views/Shared/_Layout.cshtml
@@ -266,12 +266,12 @@
                 </a>
                 <ul id="User-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserList">
                             <i class="bi bi-circle"></i><span>User List</span>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="AddUSer">
                             <i class="bi bi-circle"></i><span>Add User</span>
                         </a>
                     </li>
@@ -284,12 +284,12 @@
                 </a>
                 <ul id="Quiz-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Quiz" asp-action="QuizList">
                             <i class="bi bi-circle"></i><span>Quiz List</span>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Quiz" asp-action="AddQuiz">
                             <i class="bi bi-circle"></i><span>Add Quiz</span>
                         </a>
                     </li>
@@ -302,12 +302,12 @@
                 </a>
                 <ul id="Question-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="QuestionList">
                             <i class="bi bi-circle"></i><span>Question List</span>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="AddQuestion">
                             <i class="bi bi-circle"></i><span>Add Question</span>
                         </a>
                     </li>
@@ -321,12 +321,12 @@
                 </a>
                 <ul id="QuestionLevel-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="QuestionLevel" asp-action="QuestionLevelList">
                             <i class="bi bi-circle"></i><span>Question Level List</span>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="QuestionLevel" asp-action="AddQuestionLevel">
                             <i class="bi bi-circle"></i><span>Add Question Level</span>
                         </a>
                     </li>
@@ -340,12 +340,12 @@
                 </a>
                 <ul id="QuizWiseQuestion-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="QuizWiseQuestion" asp-action="QuizWiseQuestionList">
                             <i class="bi bi-circle"></i><span>Quiz Wise Question List</span>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="StudentRegistrationForm">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="QuizWiseQuestion" asp-action="AddQuizWiseQuestion">
                             <i class="bi bi-circle"></i><span>Add Quiz Wise Question</span>
                         </a>
                     </li>
