--- a/My_Project_dotNET/Views/QuestionLevel/AddQuestionLevel.cshtml
+++ b/My_Project_dotNET/Views/QuestionLevel/AddQuestionLevel.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="pagetitle">
-    <h1>Add Question Level List</h1>
+    <h1>Add Question Level</h1>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
