--- a/My_Project_dotNET/Views/Question/QuestionList.cshtml
+++ b/My_Project_dotNET/Views/Question/QuestionList.cshtml
@@ -8,6 +8,9 @@
             <li class="breadcrumb-item">
                 <a asp-area="" asp-controller="Question" asp-action="QuestionList">Question</a>
             </li>
+            <li class="breadcrumb-item">
+                <a asp-area="" asp-controller="Question" asp-action="QuestionList">Question List</a>
+            </li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
