--- a/My_Project_dotNET/Views/QuestionLevel/AddQuestionLevel.cshtml
+++ b/My_Project_dotNET/Views/QuestionLevel/AddQuestionLevel.cshtml
@@ -9,8 +9,83 @@
                 <a asp-area="" asp-controller="QuestionLevel" asp-action="QuestionLevelList">QuestionLevel</a>
             </li>
             <li class="breadcrumb-item">
-                <a asp-area="" asp-controller="QuestionLevel" asp-action="AddQuestionLevel">AddQuestionLevel</a>
+                <a asp-area="" asp-controller="QuestionLevel" asp-action="AddQuestionLevel">Add QuestionLevel</a>
             </li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Forms / Layouts - NiceAdmin Bootstrap Template</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="~/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="~/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="~/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="~/assets/vendor/simple-datatables/style.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="~/assets/css/style.css" rel="stylesheet">
+
+</head>
+
+<body>
+    <div class="d-flex justify-content-center align-items-center">
+        <!-- Question Form -->
+        <form class="bg-white w-100 p-5 border border-dark border-1 rounded">
+            <div class="row">
+                <div class="col-sm">
+                    <h3>Add Question Level</h3>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <hr />
+            </div>
+            <div class="row mb-3">
+                <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Question Level</label>
+                <div class="col-sm">
+                    <input type="text" class="form-control" id="inputText" placeholder="Enter Question level (e.g.,Easy,Medium,Hard)">
+                </div>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-success">Save</button>
+                <button type="reset" class="btn btn-danger">Cancel</button>
+            </div>
+        </form><!-- End Question Form -->
+    </div>
+
+    <!-- Vendor JS Files -->
+    <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/assets/vendor/chart.js/chart.umd.js"></script>
+    <script src="~/assets/vendor/echarts/echarts.min.js"></script>
+    <script src="~/assets/vendor/quill/quill.js"></script>
+    <script src="~/assets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="~/assets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="~/assets/vendor/php-email-form/validate.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="~/assets/js/main.js"></script>
+
+</body>
+
+</html>
