--- a/My_Project_dotNET/Views/Quiz/QuizList.cshtml
+++ b/My_Project_dotNET/Views/Quiz/QuizList.cshtml
@@ -8,6 +8,9 @@
             <li class="breadcrumb-item">
                 <a asp-area="" asp-controller="Quiz" asp-action="QuizList">Quiz</a>
             </li>
+            <li class="breadcrumb-item">
+                <a asp-area="" asp-controller="Quiz" asp-action="QuizList">Quiz List</a>
+            </li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
