--- a/My_Project_dotNET/Views/Shared/_Layout.cshtml
+++ b/My_Project_dotNET/Views/Shared/_Layout.cshtml
@@ -344,6 +344,11 @@
                         </a>
                     </li>
                     <li>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="QuizWiseQuestion" asp-action="QuizWiseQuestionDetails">
+                            <i class="bi bi-circle"></i><span>Quiz Wise Question Details</span>
+                        </a>
+                    </li>
+                    <li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="QuizWiseQuestion" asp-action="AddQuizWiseQuestion">
                             <i class="bi bi-circle"></i><span>Add Quiz Wise Question</span>
                         </a>
