--- a/My_Project_dotNET/Views/QuizWiseQuestion/QuizWiseQuestionDetails.cshtml
+++ b/My_Project_dotNET/Views/QuizWiseQuestion/QuizWiseQuestionDetails.cshtml
@@ -86,7 +86,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <th><input type="checkbox" /></th>
+                    <td><input type="checkbox" /></td>
                     <td>Who was the first President of the USA?</td>
                     <td>George Washington</td>
                     <td>Abraham Lincoln</td>
