--- a/My_Project_dotNET/Views/Quiz/QuizList.cshtml
+++ b/My_Project_dotNET/Views/Quiz/QuizList.cshtml
@@ -14,3 +14,153 @@
         </ol>
     </nav>
 </div><!-- End Page Title -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Forms / Layouts - NiceAdmin Bootstrap Template</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="~/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="~/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="~/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="~/assets/vendor/simple-datatables/style.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="~/assets/css/style.css" rel="stylesheet">
+
+</head>
+
+<body>
+    <div class="container mt-4 bg-white w-100 p-5 border border-dark border-1 rounded">
+        <div class="row">
+            <div class="col-sm">
+                <h3>Search</h3>
+            </div>
+        </div>
+        <div class="row">
+            <hr />
+        </div>
+        <div class="row mb-3">
+            <div class="col-4">
+                <label for="inputEmail3" class="col-form-label">Quiz Name</label>
+                <input type="text" class="form-control" placeholder="Enter Quiz Name" />
+            </div>
+            <div class="col-4">
+                <label for="inputEmail3" class="col-form-label">Min Question</label>
+                <input type="number" class="form-control" placeholder="Enter Min Question" />
+            </div>
+            <div class="col-4">
+                <label for="inputEmail3" class="col-form-label">Max Question</label>
+                <input type="number" class="form-control" placeholder="Enter Max Question" />
+            </div>
+            <div class="col-4">
+                <label for="inputEmail3" class="col-form-label">From Quiz Date</label>
+                <input type="date" class="form-control" />
+            </div>
+            <div class="col-4">
+                <label for="inputEmail3" class="col-form-label">To Quiz Date</label>
+                <input type="date" class="form-control" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="text-start">
+                <button type="submit" class="btn btn-success">Save</button>
+                <button type="reset" class="btn btn-danger">Cancel</button>
+            </div>
+        </div>
+    </div><!-- End of Search -->
+    <div class="container mt-4 bg-white w-100 p-5 border border-dark border-1 rounded">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Quiz List</h3>
+            </div>
+            <div class="col-sm-6 d-flex justify-content-end">
+                <div class="mx-1"><a class="btn btn-primary" href="@Url.Action("AddQuiz","Quiz")">Add Quiz</a></div>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <hr />
+        </div>
+        <table class="table datatable table-striped" cellspacing="5" cellpadding="10">
+            <thead class="table-lite">
+                <tr>
+                    <th>Quiz Name</th>
+                    <th>Total Questions</th>
+                    <th>Quiz Date</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>ABCD Random</td>
+                    <td>10</td>
+                    <td>01-01-2025</td>
+                    <td class="w-50">
+                        <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
+                        <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>ABCD Random</td>
+                    <td>10</td>
+                    <td>01-01-2025</td>
+                    <td class="w-50">
+                        <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
+                        <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>ABCD Random</td>
+                    <td>10</td>
+                    <td>01-01-2025</td>
+                    <td class="w-50">
+                        <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
+                        <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>ABCD Random</td>
+                    <td>10</td>
+                    <td>01-01-2025</td>
+                    <td class="w-50">
+                        <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
+                        <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table><!-- End of Table -->
+    </div><!-- End of Table -->
+    <!-- Vendor JS Files -->
+    <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/assets/vendor/chart.js/chart.umd.js"></script>
+    <script src="~/assets/vendor/echarts/echarts.min.js"></script>
+    <script src="~/assets/vendor/quill/quill.js"></script>
+    <script src="~/assets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="~/assets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="~/assets/vendor/php-email-form/validate.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="~/assets/js/main.js"></script>
+
+</body>
+
+</html>
