--- a/My_Project_dotNET/Views/QuizWiseQuestion/QuizWiseQuestionList.cshtml
+++ b/My_Project_dotNET/Views/QuizWiseQuestion/QuizWiseQuestionList.cshtml
@@ -63,9 +63,9 @@
             <div class="col-sm-3">
                 <select class="form-select">
                     <option selected disabled>Select Quiz</option>
-                    <option>Easy</option>
-                    <option>Medium</option>
-                    <option>Hard</option>
+                    <option>English Grammer</option>
+                    <option>Mtaths </option>
+                    <option>G.K</option>
                 </select>
             </div>
         </div>
@@ -109,7 +109,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>English Grammer</td>
+                    <td>Maths</td>
                     <td>10</td>
                     <td>John Doe</td>
                     <td class="w-50">
@@ -119,7 +119,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>English Grammer</td>
+                    <td>G.K.</td>
                     <td>10</td>
                     <td>John Doe</td>
                     <td class="w-50">
