--- a/My_Project_dotNET/Views/Shared/_Layout.cshtml
+++ b/My_Project_dotNET/Views/Shared/_Layout.cshtml
@@ -21,11 +21,12 @@
     <link href="~/assets/css/style.css" rel="stylesheet">
 
 </head>
+
 <body>
     <header id="header" class="header fixed-top d-flex align-items-center">
 
         <div class="d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo d-flex align-items-center">
+            <a asp-controller="Home" asp-action="index" class="logo d-flex align-items-center">
                 <span class="d-none d-lg-block">VB QuizMaster</span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -389,4 +390,5 @@
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
