--- a/My_Project_dotNET/Views/Question/AddQuestion.cshtml
+++ b/My_Project_dotNET/Views/Question/AddQuestion.cshtml
@@ -51,7 +51,7 @@
 <body>
     <div class="d-flex justify-content-center align-items-center">
         <!-- Question Form -->
-        <form class="bg-white w-100 p-5 border border-dark border-1 rounded">
+        <form class="bg-white w-100 p-3 border border-dark border-1 rounded">
             <div class="row">
                 <div class="col-sm">
                     <h3>Add Question</h3>
@@ -63,7 +63,7 @@
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Question</label>
                 <div class="col-sm">
-                    <input type="text" class="form-control" id="inputText" placeholder="Enter Question">
+                   <textarea class="form-control" rows="3" placeholder="Enter the Question"></textarea>
                 </div>
             </div>
             <div class="row mb-3">
@@ -80,25 +80,25 @@
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Option A</label>
                 <div class="col-sm">
-                    <input type="text" class="form-control" id="inputText" placeholder="Enter Option A">
+                    <textarea class="form-control" placeholder="Enter the Option A"></textarea>
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Option B</label>
                 <div class="col-sm">
-                    <input type="text" class="form-control" id="inputText" placeholder="Enter Option B">
+                    <textarea class="form-control" placeholder="Enter the Option B"></textarea>
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Option C</label>
                 <div class="col-sm">
-                    <input type="text" class="form-control" id="inputText" placeholder="Enter Option C">
+                    <textarea class="form-control" placeholder="Enter the Option C"></textarea>
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Option D</label>
                 <div class="col-sm">
-                    <input type="text" class="form-control" id="inputText" placeholder="Enter Option D">
+                    <textarea class="form-control" placeholder="Enter the Option D"></textarea>
                 </div>
             </div>
             <div class="row mb-3">
@@ -116,7 +116,7 @@
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Marks</label>
                 <div class="col-sm">
-                    <input type="number" class="form-control" id="inputText" placeholder="0">
+                    <input type="number" class="form-control" id="inputText" placeholder="Enter the Marks">
                 </div>
             </div>
             <div class="text-center">
