--- a/My_Project_dotNET/Views/Question/QuestionList.cshtml
+++ b/My_Project_dotNET/Views/Question/QuestionList.cshtml
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-    <div class="container mt-4 bg-white w-100 p-5 border border-dark border-1 rounded">
+    <div class="container mt-4 bg-white w-100 p-3 border border-dark border-1 rounded">
         <div class="row">
             <div class="col-sm">
                 <h3>Search</h3>
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div><!-- End of Search -->
-    <div class="container mt-4 bg-white w-100 p-5 border border-dark border-1 rounded">
+    <div class="container mt-4 bg-white w-100 p-3 border border-dark border-1 rounded">
         <div class="row">
             <div class="col-sm-6">
                 <h3>Question List</h3>
@@ -117,13 +117,13 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>1 + 1 </td>
+                    <td>Who is A First Prime Minister Of India ? </td>
                     <td>Hard</td>
-                    <td>2</td>
-                    <td>-2</td>
-                    <td>0</td>
-                    <td>Infinite</td>
-                    <td>A</td>
+                    <td>Narendra Modi</td>
+                    <td>Manmohan Sinh</td>
+                    <td>Rahul Gandhi</td>
+                    <td>Javarlal Nehru</td>
+                    <td>D</td>
                     <td>2</td>
                     <td>Yes</td>
                     <td class="w-50">
@@ -132,31 +132,31 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>1 + 1 </td>
+                    <td>Who is A Prime Minister Of India ? </td>
                     <td>Hard</td>
-                    <td>2</td>
-                    <td>-2</td>
-                    <td>0</td>
-                    <td>Infinite</td>
+                    <td>Narendra Modi</td>
+                    <td>Manmohan Sinh</td>
+                    <td>Rahul Gandhi</td>
+                    <td>Kejrival</td>
                     <td>A</td>
                     <td>2</td>
                     <td>Yes</td>
-                    <td class="w-50">
+                    <td>
                         <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
                         <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
                     </td>
                 </tr>
                 <tr>
-                    <td>1 + 1 </td>
+                    <td>Who is A Current Leader Of Congras ? </td>
                     <td>Hard</td>
-                    <td>2</td>
-                    <td>-2</td>
-                    <td>0</td>
-                    <td>Infinite</td>
-                    <td>A</td>
+                    <td>Narendra Modi</td>
+                    <td>Manmohan Sinh</td>
+                    <td>Rahul Gandhi</td>
+                    <td>Kejrival</td>
+                    <td>C</td>
                     <td>2</td>
                     <td>Yes</td>
-                    <td class="w-50">
+                    <td>
                         <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
                         <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
                     </td>
