--- a/My_Project_dotNET/Views/Quiz/AddQuiz.cshtml
+++ b/My_Project_dotNET/Views/Quiz/AddQuiz.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="pagetitle">
-    <h1>Quiz List</h1>
+    <h1>Add Quiz</h1>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
@@ -51,7 +51,7 @@
 <body>
     <div class="d-flex justify-content-center align-items-center">
         <!-- Quiz Form -->
-        <form class="bg-white w-100 p-5 border border-dark border-1 rounded">
+        <form class="bg-white w-100 p-3 border border-dark border-1 rounded">
             <div class="row">
                 <div class="col-sm">
                     <h3>Add Quiz</h3>
