--- a/My_Project_dotNET/Views/Shared/_Layout.cshtml
+++ b/My_Project_dotNET/Views/Shared/_Layout.cshtml
@@ -271,7 +271,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="AddUSer">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Register">
                             <i class="bi bi-circle"></i><span>Add User</span>
                         </a>
                     </li>
@@ -371,7 +371,7 @@
 
     <footer id="footer" class="footer">
         <div class="copyright">
-            &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>VB QuizMaster</span></strong>. All Rights Reserved
         </div>
     </footer> <!-- End Footer -->
 
