update Quiz Project

--- a/My_Project_dotNET/Views/User/UserList.cshtml
+++ b/My_Project_dotNET/Views/User/UserList.cshtml
@@ -70,6 +70,10 @@
                     <th>Password</th>
                     <th>Email</th>
                     <th>Mobile</th>
+                    <th>IsAdmin</th>
+                    <th>IsActive</th>
+                    <th>Created</th>
+                    <th>Modified</th>
                 </tr>
             </thead>
             <tbody>
@@ -80,6 +84,10 @@
                         <td>@row["Password"]</td>
                         <td>@row["Email"]</td>
                         <td>@row["Mobile"]</td>
+                        <td>@row["IsAdmin"]</td>
+                        <td>@row["IsActive"]</td>
+                        <td>@row["Created"]</td>
+                        <td>@row["Modified"]</td>
                     </tr>
                 }
             </tbody>
